--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "axios",
-  "version": "0.17.0",
+  "name": "jmx-axios",
+  "version": "0.17.1",
   "description": "Promise based HTTP client for the browser and node.js",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/axios/axios.git"
+    "url": "https://github.com/jmx164491960/jmx-axios.git"
   },
   "keywords": [
     "xhr",
@@ -24,12 +24,8 @@
     "promise",
     "node"
   ],
-  "author": "Matt Zabriskie",
+  "author": "jmx164491960",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/axios/axios/issues"
-  },
-  "homepage": "https://github.com/axios/axios",
   "devDependencies": {
     "bundlesize": "^0.5.7",
     "coveralls": "^2.11.9",
